--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "latest",
     "react-scripts": "3.3.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
